--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,8 +11,13 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to '店舗一覧', "#", class: "category-list" %></li>
-      <li><%= link_to '新店舗一覧', "#", class: "brand-list" %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to '新規店舗登録', new_item_path, class: "category-list" %></li>
+        <li><%= link_to 'マイページ', "#", class: "brand-list" %></li>
+      <% else %>
+        <li><%= link_to 'ようこそYOYAKUへ',new_user_registration_path, class: "category-list" %></li>
+        <li><%= link_to '世界の予約アプリ', new_user_registration_path, class: "brand-list" %></li>
+      <% end %>
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in? %>
