--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -91,14 +91,12 @@
     <form>
       <textarea class="comment-text"></textarea>
       <p class="comment-warn">
-        ユーザーのことを考え丁寧なコメントを心がけましょう。
-        <br>
-        不快な言葉遣いなどは利用制限や退会処分となることがあります。
+        <button type="submit" class="comment-btn">
+          <%= image_tag "comment.png" ,class:"comment-flag-icon" , width:"20",height:"25"%>
+          <span>コメントする<span>
+        </button>
+        <br>『この店舗のコメントを書き込んで評価してみましょう』
       </p>
-      <button type="submit" class="comment-btn">
-        <%= image_tag "comment.png", new_item_comment , class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
-      </button>
     </form>
   </div>
   <div class="links">
