--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,12 +11,12 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
+      <% if user_signed_in? %>
       <li><%= link_to '店舗一覧', "#", class: "category-list" %></li>
-      <li><%= link_to '新店舗一覧', "#", class: "brand-list" %></li>
+      <li><%= link_to 'マイページ', user_path(current_user), class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
-      <% if user_signed_in? %>
-       <li><%= link_to current_user.nickname, "#" ,class: "user-nickname"%> </li>
+       <li><%= link_to current_user.nickname, "#", class: "user-nickname"%> </li>
        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li> 
        </div>
       <% else %>
