--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,6 +25,7 @@
       <% end %>
     </ul>
     <ul class='lists-right'>
+      <% if user_signed_in? %>
        <li><%= link_to current_user.nickname, "#", class: "user-nickname"%> </li>
        <li><%= link_to '『ログアウト』', destroy_user_session_path, method: :delete, class: "logout" %></li> 
        </div>
